--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="images/git.jpg">
+        <img src="https://pbs.twimg.com/profile_images/378800000676520671/550c98bd8e9275e59065f9428daf0543_bigger.jpeg">
         <h1 class="sidebar_information_title">
           Rubén Melo
         </h1>
